style.css
@import url('media/webfonts/stylesheet.css');

index, html {
    font-family:'Syne', sans-serif;
    font-style: normal;
    font-weight: normal;
}
.tableRow
{
    display: table;
    /* width: 100%; */
    table-layout: fixed;
    border-spacing: 10px;
    text-align: center;
    font-family:'Syne', sans-serif;
    font-weight: bold;
    font-style: normal;
    margin-left: auto;
    margin-right: auto;
    background-color: rgb(0, 0, 0, 0.33);
}
.tableColumn
{
    display: table-cell;
    font-family:/* Copperplate; */'Syne', sans-serif;
    font-weight: normal;
    font-style: normal;
/*     border: 1px solid #f4f2d0; */
    padding: 3px;
    text-transform: uppercase;
    /* text-decoration: underline; */
    background-color: rgb(0, 0, 0, 0);
    text-align: center;

}

#footer {
  width: 100%;
  position: absolute;
  bottom: 0;
  z-index: 10;
  background-color: rgb(0, 0, 0, 0.33);
  margin-bottom: 0px;
}

#navbar {
  display: table;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  background-color: rgb(0, 0, 0, 0.333);
}


/* NAVBAR BUTTONS */
#info-button {
  text-align: left;
  display: table-cell;
  width: 33%;
}

#clastic-title {
  text-align: center;
  display: table-cell;
  width: 34%
}

#credits-button {
  text-align: right;
  display: table-cell;
  width: 33%
}


/* Info */

.info
{
/*     display: table; */
    background-color: /* #34271b */rgb(0, 0, 0);
    font-family:'Syne', sans-serif;
    font-style: normal;
    font-weight: bold;
    text-align: center;
    padding-top: 10px;
}
.info_details {
    
font-family:/* monospace */'Syne', sans-serif;
  padding-top: 20px;
  font-style: normal;
  font-weight: normal;
  text-align: center;
}

#infolist {
  list-style: number;
  display: block;
  padding-left: 15px;
}

.info_warning { 
  padding-top: 20px;  
  font-family:/* monospace */'Syne', sans-serif;
  font-style: normal;
  font-weight: normal;
  text-align: center;
  }

.playbutton {
    font-family: 'Syne';
    font-weight: bold;
    font-style: normal;
    font-size: 20px;
    /* text-decoration: underline; */
    padding: 5px;

}

.bold {
  /* font-weight: bold; */
  color: black;
  background-color:rgba(255, 235, 205, 1);
  padding: 2px;
}

.browsers {
  color: white;
  background-color:rgba(255, 235, 205, 0.25);
  padding: 2px;
}


 /* The Modal (background) */
 #userAction {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content/Box */
  #userAction-content {
    background-color: #000/* #140d0d */;
    margin: 5% auto; /* 15% from the top and centered */
    padding: 20px;
/*     border: 1px dotted #f6f3c4; */
    width: 80%; /* Could be more or less, depending on screen size */
    text-align: center;
  }




.cover {

  margin-left: auto;
  margin-right: auto;
  text-align: center; 
  max-width: 50%;
}

  .cover img {
    display: block;
  }


    .cover.main img {
      width: 100%;
    }

  @media screen and (max-width: 736px) {

    .cover.fit {
      margin: 2rem 0;
    }

    .cover.main {
      margin: 2rem 0;
    }

  }

div.cover {
  overflow: hidden;
}

div.cover img {
    -moz-transition: -moz-transform 1.5s ease-out;
    -webkit-transition: -webkit-transform 1.5s ease-out;
    -ms-transition: -ms-transform 1.5s ease-out;
    transition: transform 1.5s ease-out;
  }

  div.cover:hover img {
    -moz-transform: scale(0.95, 0.95);
    -webkit-transform: scale(0.95, 0.95);
    -ms-transform: scale(0.95, 0.95);
    transform: scale(0.95, 0.95);

    -webkit-transition: transform 1.05s ease-in-out;
    -moz-transition:transform 1.05s ease-in-out;
    -ms-transition:transform 1.05s ease-in-out;


  }




  /* CANVAS */



body {
  height: 100vh;
}


body {
  background-color: #000000;
  color:blanchedalmond;
  font-family:'Syne', sans-serif;
  font-weight: normal;
  font-style: normal;
  overflow: hidden;
  }

/* Center vertically */

.center {
  display: flex;
  align-items: center;
  justify-content: center;
}


.container {
  width: 100%;
}

.demo {
padding-top: 0px;
padding-bottom: 0px;
}

#hydra-canvas {
  position: absolute;
  width: 100vw;
  top: 50%;
  transform: translateY(-50%);
  -ms-transform: translateY(-50%); 
}




a:link { 
  /* text-decoration: underline; */
  color: blanchedalmond; 
  font-weight: normal;
}

a:hover {
  font-weight: none;
  color:blanchedalmond;
  text-decoration: line-through;
  -webkit-text-decoration-color: blanchedalmond;
  text-decoration-color: blanchedalmond;
}



a:visited { 
  color: blanchedalmond; 
  text-decoration: none;
  font-weight: normal;
}

a:active { 
  color: blanchedalmond; 
  text-decoration: none;
}





/* FOOTER  */

.navbar-default {
  background: rgb(0, 0, 0, 0.33);
  padding-top:10px;
  padding-bottom: 10px;
  border-color: transparent;
  
}

.navbar-default .navbar-collapse {
  border-color: transparent;
}

.navbar-toggle {
  margin: 0px;
}

ul {
  display: flex;
  justify-content: space-between;
  width: 100%
}

@media screen and (max-width: 768px) {
  ul {
    display: unset;
  }
  li {
  }
}

#hamburger {
  display: flex;
  justify-content: center;

}

#myNavbar {
  padding-left: 0px;
  padding-right: 0px;
}

